--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,7 +11,7 @@ jobs:
         os: [ubuntu-latest]
         node: ['15.x']
 
-    name: Node ${{ matrix.php }} - ${{ matrix.os }}
+    name: Node ${{ matrix.node }} - ${{ matrix.os }}
 
     steps:
     - name: Checkout
