--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,37 +1,29 @@
 name: Tests
 
-on: ['push', 'pull_request']
+on: ["push", "pull_request"]
 
 jobs:
-  ci:
-    runs-on: ${{ matrix.os }}
+    ci:
+        runs-on: ${{ matrix.os }}
 
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-        node: ['15.x']
+        strategy:
+            matrix:
+                os: [ubuntu-latest]
 
-    name: Node ${{ matrix.node }} - ${{ matrix.os }}
+        name: Node - ${{ matrix.os }}
 
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v2
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v4
 
-    - name: Cache dependencies
-      uses: actions/cache@v2
-      with:
-        path: ~/.npm
-        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-        restore-keys: |
-          ${{ runner.os }}-node-
+            - name: Setup Node
+              uses: actions/setup-node@v4
+              with:
+                  node-version-file: ".nvmrc"
+                  cache: "npm"
 
-    - name: Setup Node
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node }}
+            - name: Install npm dependencies
+              run: npm ci
 
-    - name: Install npm dependencies
-      run: npm i
-
-    - name: Run tests
-      run: npm test
+            - name: Run tests
+              run: npm test
