--- a/package.json
+++ b/package.json
@@ -1,23 +1,61 @@
 {
   "name": "arionum-js",
-  "version": "1.3.4",
+  "type": "module",
+  "source": "src/index.ts",
   "description": "An API wrapper for the Arionum cryptocurrency node.",
-  "main": "src/index.js",
+  "version": "2.0.0",
+  "typings": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "require": "./dist/api.cjs",
+      "default": "./dist/api.modern.js"
+    }
+  },
+  "main": "./dist/api.cjs",
+  "types": "./dist/index.d.ts",
+  "module": "./dist/api.module.js",
+  "unpkg": "./dist/api.umd.js",
+  "license": "MIT",
+  "files": [
+    "dist",
+    "src"
+  ],
   "scripts": {
-    "lint": "standard \"src/**/*.js\" --fix",
-    "test:lint": "standard \"src/**/*.js\"",
-    "test": "npm run test:lint"
+    "prebuild": "node src/set-version.js",
+    "build": "microbundle",
+    "dev": "microbundle watch",
+    "format": "prettier --write . '**/*.{json,md,js,ts,tsx}'",
+    "format:write": "prettier --write . '**/*.{json,md,js,ts,tsx}'",
+    "format:check": "prettier --check . '**/*.{json,md,js,ts,tsx}'",
+    "lint": "eslint \"{src,test}/**/*.{ts,js}\"",
+    "lint:fix": "eslint \"{src,test}/**/*.{ts,js}\" --fix",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
+  },
+  "devDependencies": {
+    "@tsconfig/recommended": "^1.0.6",
+    "@types/node": "^20.12.12",
+    "@typescript-eslint/eslint-plugin": "^7.11.0",
+    "@typescript-eslint/parser": "^7.11.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-simple-import-sort": "^12.1.0",
+    "microbundle": "^0.15.1",
+    "msw": "^2.3.0",
+    "prettier": "^3.2.5",
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.11.0",
+    "vite": "^5.2.12",
+    "vitest": "^1.6.0"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/owenvoke/arionum-js.git"
   },
-  "author": "Owen Voke <development@voke.dev>",
-  "license": "MIT",
-  "dependencies": {
-    "axios": "^0.21.1"
-  },
-  "devDependencies": {
-    "standard": "^16.0"
-  }
+  "author": "Owen Voke <development@voke.dev>"
 }
